--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,10 @@
     background-image: url("icon-copy.svg");
 }
 
+#copy[disabled]::before {
+    background-image: url("icon-copy-disabled.svg");
+}
+
 .copy-ok#copy::before {
     background-image: url("icon-ok.svg");
 }
@@ -77,8 +81,8 @@
     background-image: url("icon-info.svg");
 }
 
-#like::before {
-    background-image: url("icon-like.svg");
+#xpath-console::before {
+    background-image: url("icon-x.svg");
 }
 
 #update::before {
@@ -100,17 +104,19 @@ html {
 }
 
 .container {
-    min-width: 500px;
+    min-width: 520px;
     text-align: left;
 }
 
 .pad {
     min-width: 100%;
-    margin: 15px 0 0 0;
+    margin: 6px 0 6px 0;
 }
+
 .horizontal-pad {
-    min-width: 100%;
-    margin: 6px 0px 4px 6px;
+    min-width: 80%;
+    /* margin: 6px 0px 4px 6px; */
+    margin: 6px 0px 6px 0;
 }
 
 .btn-wide {
@@ -162,7 +168,7 @@ button::before {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 img {
@@ -191,6 +197,12 @@ textarea {
     border-radius: 1px;
     border: 1px solid #BBBBBB;
     box-sizing: border-box;
+}
+
+input[type="text"] {
+    font-family: monospace;
+    border-radius: 1px;
+    border: 1px solid #BBBBBB;
 }
 
 .checkbox label {
@@ -243,15 +255,27 @@ textarea {
     cursor: not-allowed;
 }
 
+#settings-panel {
+  display: inline-grid;
+  line-height: 1.2;
+}
+
 .panel-row {
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 10px;
 }
 
 input[type="checkbox"] {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    vertical-align: middle;
 }
+
+input[type="radio"] {
+  margin-top: 0px;
+  vertical-align: middle;
+}
+
 
 .copy-ok, .copy-fail {
     background-color: transparent;
