--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 /* latin-ext */
+/* 
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
@@ -6,7 +7,9 @@
     src: local('Roboto'), local('Roboto-Regular'), local('sans-serif'), url('../vendors/roboto-latin-ext.woff2') format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
+*/ 
 /* latin */
+/*
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
@@ -14,6 +17,7 @@
     src: local('Roboto'), local('Roboto-Regular'), local('sans-serif'), url('../vendors/roboto-latin.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+*/
 
 #scan::before {
     background-image: url("icon-target.svg");
