--- a/assets/style.css
+++ b/assets/style.css
@@ -1,26 +1,8 @@
-/* latin-ext */
-/* 
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Roboto'), local('Roboto-Regular'), local('sans-serif'), url('../vendors/roboto-latin-ext.woff2') format('woff2');
-    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-*/ 
-/* latin */
-/*
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Roboto'), local('Roboto-Regular'), local('sans-serif'), url('../vendors/roboto-latin.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
-*/
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=JetBrains+Mono&display=swap');
 
 #scan::before {
-    background-image: url("icon-target.svg");
+    background-image: url("btn-scan.svg");
 }
 
 #scan[disabled]::before {
@@ -102,23 +84,27 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin: 12px;
 }
 
 html {
     font-size: 16px;
     box-sizing: border-box;
 }
+html * {
+    transition: all 0.1s;
+}
 
 .container {
-    min-width: 520px;
+    width: 520px;
     text-align: left;
 }
 
 .pad {
     min-width: 100%;
-    margin: 6px 0 6px 0;
+    margin: 12px 0;
 }
 
 .horizontal-pad {
@@ -127,52 +113,95 @@ html {
     margin: 6px 0px 6px 0;
 }
 
-.btn-wide {
-    min-width: 93px;
-}
-
-.btn-thin {
-    float: right;
-}
-
 button {
-    background: transparent;
-    margin: 0px 3px 0 0;
-    padding: 6px;
-    border: 1px solid #BBBBBB;
+    background: #F7F5FA;
+    border-radius: 2px;
+    font-weight: 500;
+    color: #4D33D1;
+    margin: 0px 8px 0 0;
     user-select: none;
     outline: none;
-    text-transform: uppercase;
+    padding: 8px 16px;
+    border: 1px solid #F7F5FA;
+    display: inline-flex;
+    align-items: center;
+    line-height: 17px;
 }
-
 button:disabled {
     color: #D2D2D2;
-    border: 1px solid #E8E8E8;
+    border: 1px solid #F7F5FA;
 }
-
 button:active:hover {
-    background-color: #3A3A3A;
     border: 1px solid #6C50FA;
-    color: #FFFDE7;
 }
-
 button:disabled:hover {
     cursor: not-allowed;
     z-index: 1;
+    border: 1px solid #F7F5FA;
+    background: #F7F5FA;
 }
-
 button:hover {
     cursor: pointer;
     z-index: 1;
     border: 1px solid #6C50FA;
+    background: #E2DDF8;
 }
-
 button::before {
     display: inline-block;
-    height: 24px;
-    width: 24px;
+    height: 18px;
+    width: 18px;
     vertical-align: middle;
     content: "";
+}
+
+.btn-wide::before {
+    margin-right: 8px;
+}
+
+.btn-thin {
+    float: right;
+    padding: 8px;
+}
+
+.btn-last {
+    margin-right: 0 !important;
+}
+.btn-active {
+    background: #E1DDF8 !important;
+}
+
+.btn-context {
+    background: transparent;
+    font-weight: 400;
+    color: #F7F7F8;
+    margin: 4px 8px 4px 0;
+    padding: 4px;
+    border: none;
+    line-height: 15px;
+
+}
+.btn-context:hover, .btn-context:active:hover {
+    border: none;
+    background: #2F353F;
+}
+.btn-context::before {
+    height: 16px;
+    width: 16px;
+    margin-right: 4px;
+}
+.btn-context:disabled {
+    color: #58546B;
+    border: none;
+}
+.btn-context:disabled:hover {
+    color: #58546B;
+    border: none;
+    background: transparent;
+}
+button.copy-ok:hover {
+    cursor: default;
+    z-index: 1;
+    background: transparent;
 }
 
 .hidden {
@@ -194,26 +223,46 @@ img {
 
 #script-container {
     background-color: #f0f0f0;
-    padding: 0px 4px 0px 4px;
+    background: #2F353F;
+    border-radius: 4px;
+}
+
+#status-field {
+    font-size: 16px;
+}
+
+#script-container pre {
+    padding: 12px 20px 0 12px;
+    max-height: 400px;
+    overflow: auto;
+    margin: 0;
+    white-space: pre-wrap;
 }
 
 #script-output {
-    font-family: monospace;
-    /* font-weight: 300;
-    font-size: 14px;*/
-    color: #black;
+    font-family: 'JetBrains Mono', monospace;
+    font-size: 14px;
+    color: #DCDBE1;
     min-width: 100%;
     min-height: 150px;
     outline: none;
-    /* border-radius: 1px;
-     border: 1px solid #BBBBBB; */
     box-sizing: border-box;
+}
+#script-actions {
+    background: #272C37;
+    height: 32px;
+    padding: 0 12px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    display: flex;
+    justify-content: space-between;
 }
 
 input[type="text"] {
-    font-family: monospace;
+    font-family: 'JetBrains Mono', monospace;
     border-radius: 1px;
     border: 1px solid #BBBBBB;
+    height: 28px;
 }
 
 .checkbox label {
@@ -268,7 +317,12 @@ input[type="text"] {
 
 #settings-panel {
   display: inline-grid;
-  line-height: 1.2;
+  line-height: 2;
+  font-size: 16px;
+}
+
+h3 {
+    margin-bottom: 0;
 }
 
 .panel-row {
@@ -276,25 +330,12 @@ input[type="text"] {
     margin-bottom: 10px;
 }
 
-input[type="checkbox"] {
-    margin-top: 0px;
-    margin-bottom: 0px;
+input[type="checkbox"], input[type="radio"] {
+    margin: 0 4px 4px 0;
     vertical-align: middle;
 }
 
-input[type="radio"] {
-  margin-top: 0px;
-  vertical-align: middle;
-}
-
-
 .copy-ok, .copy-fail {
     background-color: transparent;
-}
-
-button.copy-ok:hover {
-    cursor: pointer;
-    z-index: 1;
-    border: 1px solid #474747;
 }
 
