Add chardinjs for 'hints mode' support

--- a/assets/style.css
+++ b/assets/style.css
@@ -339,3 +339,8 @@ input[type="checkbox"], input[type="radio"] {
     background-color: transparent;
 }
 
+button.copy-ok:hover {
+    cursor: pointer;
+    z-index: 1;
+    border: 1px solid #474747;
+}
