--- a/assets/style.css
+++ b/assets/style.css
@@ -237,6 +237,7 @@ img {
     overflow: auto;
     margin: 0;
     white-space: pre-wrap;
+    min-height: 24px;
 }
 
 #script-output {
@@ -317,12 +318,11 @@ input[type="text"] {
 
 #settings-panel {
   display: inline-grid;
-  line-height: 2;
   font-size: 16px;
 }
 
 h3 {
-    margin-bottom: 0;
+    margin: 20px 0 12px;
 }
 
 .panel-row {
@@ -330,17 +330,23 @@ h3 {
     margin-bottom: 10px;
 }
 
+.toggle {
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 8px;
+}
+.toggle-last {
+    margin-bottom: 0;
+}
+.toggle label {
+    line-height: 20px;
+}
+
 input[type="checkbox"], input[type="radio"] {
-    margin: 0 4px 4px 0;
+    margin: 0 8px 4px 0;
     vertical-align: middle;
 }
 
 .copy-ok, .copy-fail {
     background-color: transparent;
-}
-
-button.copy-ok:hover {
-    cursor: pointer;
-    z-index: 1;
-    border: 1px solid #474747;
 }
